Parcoord Add Ellipse Slider

--- a/src/scss/chart/chart-parcoord.scss
+++ b/src/scss/chart/chart-parcoord.scss
@@ -13,27 +13,8 @@
   .axis.axis-sequence {
     position: relative;
 
-    .axis-inverter, .rotation-group {
-      transform-origin: center;
-      transform-box: fill-box;
-    }
-    .rotation-group {
-      transition: transform 500ms;
-      transform: rotate(0deg);
-    }
-
     &.axis-inverted .axis-inverter .rotation-group {
       transform: rotate(180deg);
-    }
-
-    .title, .subtitle {
-      --fit-width: true;
-      --fit-height: true;
-    }
-
-    .axis-inverter {
-      width: 12px;
-      height: 15px;
     }
 
     .title-wrapper {
@@ -49,17 +30,22 @@
       width: min-content;
     }
 
-    .ticks-transform {
-      grid-area: ticks-transform;
+    .axis-inverter, .rotation-group {
+      transform-origin: center;
+      transform-box: fill-box;
     }
-  }
+    .rotation-group {
+      transition: transform 500ms;
+      transform: rotate(0deg);
+    }
+    .axis-inverter {
+      width: 12px;
+      height: 15px;
+      .rotation-group path { fill: var(--control-elements-chart-color); }
+    }
 
-  .axis.axis-sequence.axis-bottom {
-    .title-wrapper .axis-inverter { display: none; }
-    //.axis-inverter {
-    //  position: absolute;
-    //  top: 0;
-    //  left: 0;
-    //}
+    .slider-up path, .slider-down path, .slider-ellipse {
+      fill: var(--control-elements-chart-color-40);
+    }
   }
 }
