--- a/src/scss/chart/control-elements/elements.scss
+++ b/src/scss/chart/control-elements/elements.scss
@@ -1,12 +1,12 @@
 .window-rv {
   fieldset {
-    border: 2px solid var(--conrol-elements-color);
+    border: 2px solid var(--control-elements-color);
   }
 
   .button--icon {
     display: flex;
     align-items: center;
-    border: 2px solid var(--conrol-elements-color);
+    border: 2px solid var(--control-elements-color);
     //padding: 0.5em 0.25em;
     padding: 0.25em 0.5em;
     height: 2rem;
