--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -26,5 +26,7 @@
   --color-categorical-9: #a665e4;
   --highlight-brightness: 130%;
 
-  --conrol-elements-color: rgb(239, 239, 239)
+  --control-elements-color: rgb(239, 239, 239);
+  --control-elements-chart-color: rgb(248, 229, 121);
+  --control-elements-chart-color-40: rgb(248, 229, 121, 0.4);
 }
