Define Different Label Render Strategies for different series

--- a/src/scss/window/chart/index.scss
+++ b/src/scss/window/chart/index.scss
@@ -1,5 +1,7 @@
 @use "./chart";
 @use "./chart-cartesian";
+@use "./chart-bar";
+@use "./scatterplot";
 @use "./chart-parcoord";
 @use "./control-elements";
 @use "./label-series";
