Add Additional Label Options Add Labels For Line Charts Refactor Labels

--- a/src/scss/window/chart/index.scss
+++ b/src/scss/window/chart/index.scss
@@ -2,6 +2,7 @@
 @use "./chart-cartesian";
 @use "./chart-bar";
 @use "./scatterplot";
+@use "./chart-line";
 @use "./chart-parcoord";
 @use "./control-elements";
 @use "./label-series";
