--- a/src/scss/elements.scss
+++ b/src/scss/elements.scss
@@ -2,5 +2,8 @@
   .label {
     font-size: var(--font-size-element-label);
     pointer-events: none;
+    &.highlight {
+      font-size: calc(1.3 * var(--font-size-element-label));
+    }
   }
 }
