--- a/src/scss/window/chart/scatterplot.scss
+++ b/src/scss/window/chart/scatterplot.scss
@@ -4,3 +4,7 @@
   .series-label[layout-strategy-vertical="top"] text { dominant-baseline: auto; }
   .series-label[layout-strategy-vertical="bottom"] text { dominant-baseline: hanging; }
 }
+
+.series-point {
+  overflow: hidden;
+}
