--- a/src/scss/window/graphic/line.scss
+++ b/src/scss/window/graphic/line.scss
@@ -1,6 +1,10 @@
 path.line {
   fill: none;
   stroke-width: 2;
+  &.line--origin {
+    stroke: var(--color-origin-line);
+    stroke-width: 1;
+  }
 }
 
 .highlight path.line,
