--- a/src/scss/window/chart/control-elements.scss
+++ b/src/scss/window/chart/control-elements.scss
@@ -1,5 +1,5 @@
-.slider-ellipse {
-  fill: var(--control-elements-chart-color-40);
+.slider-rect {
+  fill: var(--control-elements-chart-color1-40);
   &:active {
     filter: brightness(150%);
   }
@@ -7,7 +7,7 @@
 
 .slider-up, .slider-down, .axis-inverter {
   & path {
-    fill: var(--control-elements-chart-color);
+    fill: var(--control-elements-chart-color2);
   }
   &:active {
     filter: brightness(150%);
