Convert all SCSS files to CSS Convert LibSCSS task to LibCSS taks for mergin CSS files

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,5 @@
-.window-rv { //TODO: Replace window-rv wrapper with @scope once it is supported
+/*TODO: Replace window-rv wrapper with @scope once it is supported*/
+.window-rv {
   button, input, output, textarea, dialog {
     background-color: transparent;
     outline: none;
