--- a/src/respvis.css
+++ b/src/respvis.css
@@ -1,517 +1,4 @@
-.chart-cartesian .axis {
-  display: grid;
-}
-.chart-cartesian .axis-left {
-  grid-area: axis-left;
-  grid-template-areas: "title subtitle ticks";
-}
-.chart-cartesian .axis-left .ticks-transform {
-  margin-left: 0.5em;
-}
-.chart-cartesian .axis-left .tick text {
-  text-anchor: end;
-}
-.chart-cartesian .axis-left .ticks {
-  width: 100%;
-  height: 100%;
-  margin-left: 100%;
-}
-.chart-cartesian .axis-right {
-  grid-template-areas: "ticks title subtitle";
-}
-.chart-cartesian .axis-left, .chart-cartesian .axis-right {
-  grid-template-rows: 100%;
-  grid-template-columns: auto auto auto;
-  align-items: center;
-}
-.chart-cartesian .axis-left .title, .chart-cartesian .axis-left .subtitle, .chart-cartesian .axis-right .title, .chart-cartesian .axis-right .subtitle {
-  --fit-width: true;
-}
-.chart-cartesian .axis-left .title text, .chart-cartesian .axis-left .subtitle text, .chart-cartesian .axis-right .title text, .chart-cartesian .axis-right .subtitle text {
-  text-anchor: middle;
-  transform: rotate(-90deg);
-}
-.chart-cartesian .axis-left .ticks-transform, .chart-cartesian .axis-right .ticks-transform {
-  height: 100%;
-  --fit-width: true;
-}
-.chart-cartesian .axis-bottom {
-  grid-area: axis-bottom;
-  grid-template-areas: "ticks" "title" "subtitle";
-}
-.chart-cartesian .axis-bottom .ticks-transform {
-  margin-bottom: 1em;
-}
-.chart-cartesian .axis-bottom .tick text {
-  text-anchor: middle;
-}
-.chart-cartesian .axis-top {
-  grid-template-areas: "title" "subtitle" "ticks";
-}
-.chart-cartesian .axis-bottom, .chart-cartesian .axis-top {
-  grid-template-rows: auto auto auto;
-  grid-template-columns: 100%;
-  justify-items: center;
-}
-.chart-cartesian .axis-bottom .ticks-transform, .chart-cartesian .axis-top .ticks-transform {
-  width: 100%;
-  --fit-height: true;
-}
-.chart-cartesian .axis-bottom .title, .chart-cartesian .axis-bottom .subtitle, .chart-cartesian .axis-top .title, .chart-cartesian .axis-top .subtitle {
-  --fit-height: true;
-}
-.chart-cartesian .axis-bottom .title text, .chart-cartesian .axis-bottom .subtitle text, .chart-cartesian .axis-top .title text, .chart-cartesian .axis-top .subtitle text {
-  text-anchor: middle;
-}
-.chart-cartesian .ticks-transform {
-  grid-area: ticks;
-}
-
-.chart-parcoord {
-  display: grid;
-  grid-template: auto 1fr/1fr;
-  grid-template-areas: "header" "draw-area";
-  padding: 2rem 1rem 0.5rem 0.5rem;
-  overflow: visible;
-}
-
-.chart-parcoord .axis {
-  display: grid;
-  grid-template-rows: auto auto 1fr;
-  grid-template-columns: 1fr;
-  grid-template-areas: "title" "subtitle" "ticks-transform";
-}
-.chart-parcoord .axis .title {
-  --fit-width: true;
-  --fit-height: true;
-  grid-area: title;
-}
-.chart-parcoord .axis .title text {
-  text-anchor: middle;
-}
-.chart-parcoord .axis .subtitle {
-  --fit-width: true;
-  --fit-height: true;
-  grid-area: subtitle;
-}
-.chart-parcoord .axis .subtitle text {
-  text-anchor: middle;
-}
-.chart-parcoord .axis .ticks-transform {
-  grid-area: ticks-transform;
-}
-.chart-parcoord .axis .ticks text {
-  text-anchor: end;
-  dominant-baseline: middle;
-}
-
-.axis {
-  font-size: 0.7em;
-}
-.axis .tick line {
-  stroke: currentColor;
-}
-.axis .ticks .domain {
-  stroke: currentColor;
-  fill: none;
-}
-
-.legend {
-  grid-area: legend;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 0.8em;
-  cursor: default;
-  margin: 0.5rem;
-}
-
-[data-legend-position=right] .legend,
-.legend {
-  align-self: start;
-}
-
-[data-legend-position=top] .legend {
-  justify-self: end;
-}
-
-.legend .title {
-  margin: 0 0.5em;
-}
-
-.legend .items {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-[data-legend-position=left] .legend .items,
-[data-legend-position=right] .legend .items,
-.legend.vertical .items,
-.legend .items {
-  flex-direction: column;
-}
-
-[data-legend-position=top] .legend .items,
-[data-legend-position=bottom] .legend .items,
-.legend.horizontal .items {
-  flex-direction: row;
-}
-
-.legend-item {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 0.25em;
-}
-
-.legend-item .symbol {
-  margin-right: 0.5em;
-  stroke: #000;
-  stroke-width: 1px;
-  width: 10px;
-  height: 10px;
-}
-
-.highlight.legend-item .symbol {
-  filter: brightness(var(--highlight-brightness));
-}
-
-.chart .header {
-  grid-area: header;
-  display: grid;
-  grid-template: auto auto/1fr;
-  grid-template-areas: "title" "subtitle";
-  justify-items: center;
-  padding-bottom: 1rem;
-}
-
-.chart .header .title,
-.chart .header .subtitle {
-  --fit-width: true;
-  --fit-height: true;
-}
-
-@media (hover: none) {
-  .chart {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    user-select: none;
-  }
-}
-.chart-window {
-  display: grid;
-  position: relative;
-  grid-template: min-content 1fr/1fr;
-  grid-template-areas: "toolbar" "chart";
-  width: 100%;
-  height: 100%;
-  font-family: sans-serif;
-}
-
-.chart-cartesian[data-legend-position=right],
-.chart-cartesian {
-  display: grid;
-  grid-template: auto 1fr auto/auto 1fr auto;
-  grid-template-areas: "header header header" "axis-left draw-area legend" ". axis-bottom .";
-  padding: 2rem 1rem 0.5rem 0.5rem;
-  overflow: visible;
-}
-
-.chart-cartesian[data-legend-position=top] {
-  grid-template: auto 1fr auto/auto 1fr;
-  grid-template-areas: ". legend" "axis-left draw-area" ". axis-bottom";
-}
-
-.chart.chart-parcoord text, .chart.chart-parcoord text[data-orientation=horizontal] {
-  dominant-baseline: central;
-}
-
-.layout {
-  --fit-width: false;
-  --fit-height: false;
-  pointer-events: none;
-}
-
-.draw-area {
-  grid-area: draw-area;
-  display: grid;
-  overflow: visible;
-}
-
-.draw-area > * {
-  grid-area: 1/1;
-}
-
-.draw-area .background {
-  opacity: 0;
-}
-
-.layouter {
-  display: grid;
-  position: relative;
-}
-
-.layouter > * {
-  grid-area: 1/1;
-}
-
-.layouter > :not(.layout) {
-  position: absolute;
-  /* padding and margin are not ignored on root svg elements so they need to
-  be set to 0 to not apply them twice (1x by layouter, 1x by browser) */
-  padding: 0;
-  margin: 0;
-}
-
-.chart-window .layouter {
-  grid-area: chart;
-}
-
-.chart-window .toolbar {
-  grid-area: toolbar;
-  display: none;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-
-.chart-window:hover .toolbar, .chart-window:active .toolbar {
-  display: flex;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.menu {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.menu > .chevron {
-  font-size: 0.7em;
-  margin-right: 0.5em;
-}
-
-.menu > .items {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: -1px;
-  right: 100%;
-  border: 1px solid rgb(118, 118, 118);
-  display: none;
-}
-
-.menu,
-.menu > .items > li {
-  white-space: nowrap;
-  padding: 0.5em;
-  background-color: rgb(239, 239, 239);
-}
-
-.menu:hover,
-.menu > .items > li:hover {
-  filter: brightness(95%);
-}
-
-.menu:hover > .items {
-  display: block;
-  filter: brightness(105.26%);
-}
-
-.menu-tools {
-  z-index: 10;
-  cursor: default;
-}
-
-.menu-tools > .text {
-  font-size: 1.25rem;
-}
-
-.menu-tools > .items {
-  right: 0;
-  top: 100%;
-}
-
-:root {
-  --color-categorical-0: #78b4c6;
-  --color-categorical-1: #1c9820;
-  --color-categorical-2: #ff0087;
-  --color-categorical-3: #9bb64b;
-  --color-categorical-4: #628df2;
-  --color-categorical-5: #0db293;
-  --color-categorical-6: #f14330;
-  --color-categorical-7: #b8949e;
-  --color-categorical-8: #e49c4f;
-  --color-categorical-9: #a665e4;
-  --highlight-brightness: 130%;
-}
-
-[data-style=categorical-0] {
-  fill: var(--color-categorical-0);
-  stroke: var(--color-categorical-0);
-}
-
-[data-style=categorical-1] {
-  fill: var(--color-categorical-1);
-  stroke: var(--color-categorical-1);
-}
-
-[data-style=categorical-2] {
-  fill: var(--color-categorical-2);
-  stroke: var(--color-categorical-2);
-}
-
-[data-style=categorical-3] {
-  fill: var(--color-categorical-3);
-  stroke: var(--color-categorical-3);
-}
-
-[data-style=categorical-4] {
-  fill: var(--color-categorical-4);
-  stroke: var(--color-categorical-4);
-}
-
-[data-style=categorical-5] {
-  fill: var(--color-categorical-5);
-  stroke: var(--color-categorical-5);
-}
-
-[data-style=categorical-6] {
-  fill: var(--color-categorical-6);
-  stroke: var(--color-categorical-6);
-}
-
-[data-style=categorical-7] {
-  fill: var(--color-categorical-7);
-  stroke: var(--color-categorical-7);
-}
-
-[data-style=categorical-8] {
-  fill: var(--color-categorical-8);
-  stroke: var(--color-categorical-8);
-}
-
-[data-style=categorical-9] {
-  fill: var(--color-categorical-9);
-  stroke: var(--color-categorical-9);
-}
-
-.series-label {
-  font-size: 0.7em;
-  pointer-events: none;
-}
-
-.label.highlight, .legend-item.highlight {
-  font-size: 1.2em;
-}
-
-.text {
-  --fit-width: true;
-  --fit-height: true;
-}
-
-text {
-  stroke: none;
-}
-
-text[data-align-h=center] {
-  text-anchor: middle;
-}
-
-text[data-align-v=center] {
-  dominant-baseline: middle;
-}
-
-text[data-align-h=left] {
-  text-anchor: end;
-}
-
-text[data-align-h=right] {
-  text-anchor: start;
-}
-
-text[data-align-v=top] {
-  dominant-baseline: auto;
-}
-
-text[data-align-v=bottom] {
-  dominant-baseline: hanging;
-}
-
-text,
-text[data-orientation=horizontal] {
-  dominant-baseline: hanging;
-  text-anchor: start;
-}
-
-text[data-orientation=vertical] {
-  transform: rotate(-90deg);
-  text-anchor: end;
-  dominant-baseline: hanging;
-}
-
-.title text,
-text.title {
-  font-size: 1.5em;
-  letter-spacing: 0.1em;
-}
-
-.title {
-  grid-area: title;
-}
-
-.subtitle {
-  grid-area: subtitle;
-}
-
-path.line {
-  fill: none;
-  stroke-width: 2;
-}
-
-.highlight path.line,
-path.line.highlight {
-  stroke-width: 4;
-}
-
-.chart-line[data-flipped=false] .layout.series-label {
-  margin-top: -1em;
-}
-
-.chart-line[data-flipped=false] .series-label .label {
-  text-anchor: middle;
-  dominant-baseline: auto;
-}
-
-.chart-line[data-flipped=true] .layout.series-label {
-  margin-left: 1em;
-}
-
-.chart-line[data-flipped=true] .series-label .label {
-  dominant-baseline: middle;
-}
-
-.chart.chart-parcoord .line {
-  stroke: var(--color-categorical-0);
-}
-
-.bar {
-  stroke-width: 1px;
-  stroke: #000;
-}
-
-.highlight .bar,
-.highlight.bar,
-.highlight .point,
-.highlight.point {
-  filter: brightness(var(--highlight-brightness));
-  stroke-width: 1.2;
-}
+@import "./css/index.css";
 
 .tooltip {
   opacity: 0;
@@ -525,13 +12,4 @@ path.line.highlight {
 
 .tooltip.show {
   opacity: 1;
-}
-
-.series-point {
-  overflow: hidden;
-}
-
-.point {
-  stroke: #000;
-  stroke-width: 1px;
 }
