--- a/src/css/window/toolbar/control-elements/dialogs.css
+++ b/src/css/window/toolbar/control-elements/dialogs.css
@@ -57,7 +57,7 @@
       display: flex;
       flex-direction: column;
       gap: 0.5em;
-      &--decimal-options { flex-direction: row; }
+      .item--decimal-options { flex-direction: row; }
       legend {
         display: flex;
         cursor: pointer;
