Add clipPath element First working clippath version Add CSS Variables for customizing padding and clippath

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -43,6 +43,8 @@
 
   /*spacings and lengths*/
   --rect-slider-breadth: 20;
-
-
+  --chart-padding-left: 0;
+  --chart-padding-top: 0;
+  --chart-padding-right: 0;
+  --chart-padding-bottom: 0;
 }
