--- a/src/examples/barcharts/barchart/barchart.css
+++ b/src/examples/barcharts/barchart/barchart.css
@@ -2,6 +2,10 @@
   width: calc(100% - 1.5rem);
   height: 75vh;
   min-height: 25rem;
+  & svg.chart {
+    --chart-padding-top: 1rem;
+    --chart-padding-right: 4rem;
+  }
   .padding-wrapper {
     padding-top: 3rem;
   }
