Go back to keep classes in sync between svg and html tree (sticky classes effect) Clean up bar chart / grouped bar chart example

--- a/src/examples/barcharts/barchart/barchart.css
+++ b/src/examples/barcharts/barchart/barchart.css
@@ -2,14 +2,16 @@
   width: calc(100% - 1.5rem);
   height: 75vh;
   min-height: 25rem;
-  & svg.chart {
-    --chart-padding-top: 1rem;
-    --chart-padding-right: 4rem;
+  container-type: inline-size;
+
+  @container (width < 30rem) {
+    .window-rv {
+      --chart-padding-right: 4rem;
+    }
   }
-  .padding-wrapper {
-    padding-top: 3rem;
-  }
-  .draw-area {
-    overflow: visible;
+  @container (width >= 30rem) {
+    .window-rv {
+      --chart-padding-top: 1rem;
+    }
   }
 }
