--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.css
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.css
@@ -2,60 +2,68 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
-  & svg.chart { --font-size-legend-label: 1rem; }
-}
-
-body {
-  [data-style=categorical-0] { --color-categorical-0: #4f8c9d; }
-  [data-style=categorical-1] { --color-categorical-1: #e23209; }
-  [data-style=categorical-2] { --color-categorical-2: #539322; }
-}
-
-#chart {
-  .legend .items {
-    .legend-item {
-      width: 5rem;
-      height: 1.5rem;
-      gap: 0.5rem;
-      justify-content: flex-end;
-      &.highlight {
-        font-size: calc(1.4 * var(--font-size-legend-label));
-      }
-    }
-    align-items: flex-end;
+  container-type: inline-size;
+  .window-rv {
+    --font-size-legend-label: 1rem;
+    [data-style=categorical-0] { --color-categorical-0: #4f8c9d; }
+    [data-style=categorical-1] { --color-categorical-1: #e23209; }
+    [data-style=categorical-2] { --color-categorical-2: #539322; }
   }
-}
+  .legend {
+    .items {
+      .legend-item {
+        width: 5rem;
+        height: 1.5rem;
+        gap: 0.5rem;
+        justify-content: flex-end;
+        &.highlight {
+          font-size: calc(1.4 * var(--font-size-legend-label));
+        }
+      }
+      align-items: flex-end;
+    }
+    margin-top: 1.5rem;
+  }
 
-.chart .legend { margin-top: 1.5rem; }
+  @container (width >= 45rem) {
+    .legend {
+      margin-right: 2rem;
+    }
+  }
 
-@media (width < 45rem) {
-  .chart {
-    grid-template: auto 1fr auto / 1fr;
-    grid-template-areas:
+  @container (width < 45rem) {
+    .window-rv {
+      --chart-padding-right: 2rem;
+    }
+    .chart {
+      grid-template: auto 1fr auto / 1fr;
+      grid-template-areas:
       'header'
       'padding-wrapper'
       'legend';
-    .legend {
-      margin-top: 0;
-      padding: 1rem;
-      .items {
-        align-items: center;
+      .legend {
+        margin-top: 0;
+        padding: 1rem;
+        .items {
+          align-items: center;
+        }
       }
     }
-  }
 
+    .legend .title {
+      display: none;
+    }
 
-  .legend .title {
-    display: none;
-  }
+    .legend .items {
+      width: 100%;
+      flex-direction: row;
+      justify-content: space-evenly;
+    }
 
-  .legend .items {
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-
-  .axis-y .tick:nth-of-type(2n) {
-    display: none;
+    .axis-y .tick:nth-of-type(2n) {
+      display: none;
+    }
   }
 }
+
+
