--- a/src/examples/experimental/aggregated-barchart/barchart.css
+++ b/src/examples/experimental/aggregated-barchart/barchart.css
@@ -8,7 +8,8 @@
   margin-bottom: 2rem;
   .window-rv {
     container-type: inline-size;
-    @container (width < 30rem) {
+    --chart-padding-right: 1rem;
+    @container (width < 50rem) {
       .axis-left .tick:nth-of-type(2n) {
         display: none;
       }
