--- a/src/examples/linecharts/linechart-multiline/linechart-multiline.css
+++ b/src/examples/linecharts/linechart-multiline/linechart-multiline.css
@@ -2,8 +2,9 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
-  .padding-wrapper {
-    padding-right: 1rem;
+  container-type: inline-size;
+  .window-rv {
+    --chart-padding-right: 1rem;
   }
 
   .series-label .label {
@@ -21,10 +22,8 @@
   .point, .axis-x .tick {
     display: none;
   }
-}
 
-@media (width < 30rem) {
-  #chart {
+  @container (width < 30rem) {
     .point, .axis-x .tick {
       display: none;
     }
@@ -34,39 +33,34 @@
       .point:nth-of-type(4n) { display: block }
     }
     .axis-x .tick:nth-of-type(4n) { display: block}
-
   }
-}
 
-@media (min-width: 30rem) {
-  #chart {
+  @container (min-width: 30rem) {
     .point-category {
       .point:first-of-type, .point:last-of-type { display: block; }
       .point:nth-of-type(2n) { display: block }
     }
     .axis-x .tick:nth-of-type(2n) { display: block}
   }
-}
 
-@media (max-width: 50rem) {
-  .chart {
-    grid-template: auto auto 1fr / 1fr;
-    grid-template-areas:
+  @container (max-width: 50rem) {
+    .chart {
+      grid-template: auto auto 1fr / 1fr;
+      grid-template-areas:
       'header'
       'legend'
       'padding-wrapper';
-  }
+    }
 
-  .legend {
-    width: 100%;
-    margin-bottom: 2rem;
-    margin-left: 0.5rem;
-  }
-  .legend .items {
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-evenly;
+    .legend {
+      width: 100%;
+      margin-bottom: 2rem;
+      margin-left: 0.5rem;
+    }
+    .legend .items {
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-evenly;
+    }
   }
 }
-
-
