--- a/src/examples/linecharts/linechart/linechart.css
+++ b/src/examples/linecharts/linechart/linechart.css
@@ -2,55 +2,59 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
-}
+  container-type: inline-size;
 
-.axis .ticks .tick {
-  display: none;
-}
-
-.point {
-  opacity: 0;
-}
-
-@media (max-width: 40rem) {
-  .chart {
-    padding: 1rem 3rem 0 3rem;
-    .axis > * {
-      display: none !important;
-    }
-  }
-
-  .point:first-of-type,
-  .point:last-of-type {
-    opacity: 1;
-  }
-
-  .label:first-of-type,
-  .label:last-of-type {
-    display: block;
-  }
-  .label {
+  .axis .ticks .tick {
     display: none;
-  }
-}
-
-@media (min-width: 40rem) {
-  .ticks .tick:nth-of-type(2n + 1) {
-    display: block;
-  }
-  .ticks .tick {
-    &:nth-of-type(2n + 1), &:first-of-type, &:last-of-type {
-      display: block;
-    }
   }
 
   .point {
-    opacity: 1;
+    opacity: 0;
   }
-}
 
-@media (min-width: 80rem) {
-  .axis .ticks .tick {
-    display: block;
+  @container (width < 45rem) {
+    .window-rv {
+      --chart-padding-right: 1rem;
+      --chart-padding-left: 1rem;
+    }
+    .chart {
+      .axis > * {
+        display: none;
+      }
+    }
+
+    .point:first-of-type,
+    .point:last-of-type {
+      opacity: 1;
+    }
+
+    .label:first-of-type,
+    .label:last-of-type {
+      display: block;
+    }
+    .label {
+      display: none;
+    }
+  }
+
+  @container (width >= 45rem) {
+    .ticks .tick:nth-of-type(2n + 1) {
+      display: block;
+    }
+    .ticks .tick {
+      &:nth-of-type(2n + 1), &:first-of-type, &:last-of-type {
+        display: block;
+      }
+    }
+
+    .point {
+      opacity: 1;
+    }
+  }
+
+  @container (min-width: 80rem) {
+    .axis .ticks .tick {
+      display: block;
+    }
   }
 }
