--- a/src/examples/parcoords/parcoord/parcoord.css
+++ b/src/examples/parcoords/parcoord/parcoord.css
@@ -2,8 +2,44 @@
   width: 100%;
   height: 75vh;
   min-height: 25rem;
+  container-type: inline-size;
   .chart-parcoord {
     --chart-padding-left: 4rem;
     --chart-padding-right: 4rem;
+  }
+  @container (width < 50rem) {
+    .chart {
+      grid-template: auto 1fr auto / 1fr;
+      grid-template-areas:
+      'header'
+      'padding-wrapper'
+      'legend';
+    }
+
+    .legend {
+      width: 100%;
+      margin-bottom: 2rem;
+      flex-direction: row;
+      justify-content: center;
+      .title { display: none; }
+
+      .items {
+        display: grid;
+        width: 100%;
+        justify-content: space-evenly;
+        grid-template-columns: auto auto auto;
+
+        .legend-item {
+          justify-content: flex-start;
+        }
+      }
+    }
+  }
+  @container (width < 40rem) {
+    .axis.axis-sequence {
+      &[data-key="a-0"] .tick, &[data-key="a-1"] .tick {
+        &:nth-of-type(2n) { display: none; }
+      }
+    }
   }
 }
