--- a/src/storybook/stories/charts/line-chart/multi-line-chart/multi-line-chart.css
+++ b/src/storybook/stories/charts/line-chart/multi-line-chart/multi-line-chart.css
@@ -1,7 +1,3 @@
-.padding-wrapper {
-  padding-right: 1rem;
-}
-
 .series-label .label {
   display: none;
 }
@@ -18,45 +14,47 @@
   display: none;
 }
 
-@media (width < 30rem) {
-  .point, .axis-x .tick {
-    display: none;
+#chart {
+  container-type: inline-size;
+
+  @container (width < 30rem) {
+    .point, .axis-x .tick {
+      display: none;
+    }
+
+    .point-category {
+      .point:first-of-type, .point:last-of-type { display: block; }
+      .point:nth-of-type(4n) { display: block }
+    }
+    .axis-x .tick:nth-of-type(4n) { display: block}
   }
 
-  .point-category {
-    .point:first-of-type, .point:last-of-type { display: block; }
-    .point:nth-of-type(4n) { display: block }
+  @container (min-width: 30rem) {
+    .point-category {
+      .point:first-of-type, .point:last-of-type { display: block; }
+      .point:nth-of-type(2n) { display: block }
+    }
+    .axis-x .tick:nth-of-type(2n) { display: block}
   }
-  .axis-x .tick:nth-of-type(4n) { display: block}
-}
 
-@media (min-width: 30rem) {
-  .point-category {
-    .point:first-of-type, .point:last-of-type { display: block; }
-    .point:nth-of-type(2n) { display: block }
-  }
-  .axis-x .tick:nth-of-type(2n) { display: block}
-}
-
-@media (max-width: 50rem) {
-  .chart {
-    grid-template: auto auto 1fr / 1fr;
-    grid-template-areas:
+  @container (max-width: 50rem) {
+    .chart {
+      grid-template: auto auto 1fr / 1fr;
+      grid-template-areas:
       'header'
       'legend'
       'padding-wrapper';
-  }
+    }
 
-  .legend {
-    width: 100%;
-    margin-bottom: 2rem;
-    margin-left: 0.5rem;
-  }
-  .legend .items {
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-evenly;
+    .legend {
+      width: 100%;
+      margin-bottom: 2rem;
+      margin-left: 0.5rem;
+    }
+    .legend .items {
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-evenly;
+    }
   }
 }
-
-
