--- a/src/examples/article/charts/sold-cars-germany/sold-cars-germany.css
+++ b/src/examples/article/charts/sold-cars-germany/sold-cars-germany.css
@@ -1,49 +1,118 @@
 #sold-cars-germany-chart {
   width: 100%;
-}
+  .window-rv {
+    container-type: inline-size;
+    --chart-padding-bottom: 0.5rem;
+    --chart-padding-left: 0.5rem;
+    --chart-padding-right: 1rem;
 
-#sold-cars-germany-chart {
-  container-type: inline-size;
-//Legend To Bottom
-@container (width < 30rem) {
-  .chart {
-    grid-template: auto 1fr auto / 1fr;
-    grid-template-areas:
-      'header'
-      'padding-wrapper'
-      'legend';
-  }
+    .legend {
+      align-items: flex-start;
 
-  .legend {
-    width: 100%;
-    margin-bottom: 2rem;
-    margin-left: 0.5rem;
-    flex-direction: row;
-    justify-content: center;
-    .items {
-      display: grid;
-      width: 100%;
-      justify-content: space-between;
-      grid-template-columns: auto auto auto;
-      .legend-item {
-        justify-content: flex-start;
+      .title {
+        margin: 0;
       }
     }
-  }
-  .axis-y .tick {
-    display: none;
-    &:nth-of-type(2n + 1), &:first-of-type, &:last-of-type {
-      display: block;
-    }
-  }
-}
-  @container (width < 40rem) {
-    .axis-x .tick {
-      display: none;
-      &:nth-of-type(2n), &:first-of-type, &:last-of-type {
+
+    @container (min-width: 40rem) {
+      .tick {
         display: block;
       }
     }
+
+    @container (width < 30rem) {
+      .chart {
+        grid-template: auto 1fr auto / 1fr;
+        grid-template-areas:
+      'header'
+      'padding-wrapper'
+      'legend';
+      }
+
+      .legend {
+        width: 100%;
+        margin-bottom: 2rem;
+        flex-direction: row;
+        justify-content: center;
+        .title { display: none; }
+
+        .items {
+          display: grid;
+          width: 100%;
+          justify-content: space-between;
+          grid-template-columns: auto auto auto;
+
+          .legend-item {
+            justify-content: flex-start;
+          }
+        }
+      }
+
+      .axis-x .tick {
+        display: none;
+
+        &:nth-of-type(2n), &:first-of-type, &:last-of-type {
+          display: block;
+        }
+      }
+
+      .axis-y .tick {
+        display: none;
+
+        &:nth-of-type(2n + 1), &:first-of-type, &:last-of-type {
+          display: block;
+        }
+      }
+    }
   }
 }
+
+/*#sold-cars-germany-chart {*/
+/*  container-type: inline-size;*/
+/*  @container (width < 30rem) {*/
+/*    .chart {*/
+/*      grid-template: auto 1fr auto / 1fr;*/
+/*      grid-template-areas:*/
+/*      'header'*/
+/*      'padding-wrapper'*/
+/*      'legend';*/
+/*    }*/
+
+/*    .legend {*/
+/*      width: 100%;*/
+/*      margin-bottom: 2rem;*/
+/*      margin-left: 0.5rem;*/
+/*      flex-direction: row;*/
+/*      justify-content: center;*/
+
+/*      .items {*/
+/*        display: grid;*/
+/*        width: 100%;*/
+/*        justify-content: space-between;*/
+/*        grid-template-columns: auto auto auto;*/
+
+/*        .legend-item {*/
+/*          justify-content: flex-start;*/
+/*        }*/
+/*      }*/
+/*    }*/
+
+/*    .axis-y .tick {*/
+/*      display: none;*/
+
+/*      &:nth-of-type(2n + 1), &:first-of-type, &:last-of-type {*/
+/*        display: block;*/
+/*      }*/
+/*    }*/
+/*  }*/
+/*  @container (width < 40rem) {*/
+/*    .axis-x .tick {*/
+/*      display: none;*/
+
+/*      &:nth-of-type(2n), &:first-of-type, &:last-of-type {*/
+/*        display: block;*/
+/*      }*/
+/*    }*/
+/*  }*/
+/*}*/
 
