--- a/src/storybook/stories/charts/cartesian-charts/line-chart/multi-line-chart/multi-line-chart.css
+++ b/src/storybook/stories/charts/cartesian-charts/line-chart/multi-line-chart/multi-line-chart.css
@@ -1,60 +1,66 @@
-.series-label .label {
-  display: none;
-}
-
-.legend {
-  margin-left: 2rem;
-}
-
-.legend-item {
-  margin-top: 1rem;
-}
-
-.point, .axis-x .tick {
-  display: none;
-}
-
 #chart {
+  width: 100%;
+  height: 75vh;
+  min-height: 25rem;
   container-type: inline-size;
-
-  @container (width < 30rem) {
-    .point, .axis-x .tick {
-      display: none;
-    }
-
-    .point-category {
-      .point:first-of-type, .point:last-of-type { display: block; }
-      .point:nth-of-type(4n) { display: block }
-    }
-    .axis-x .tick:nth-of-type(4n) { display: block}
+  .window-rv {
+    --chart-padding-right: 1rem;
   }
 
-  @container (min-width: 30rem) {
-    .point-category {
-      .point:first-of-type, .point:last-of-type { display: block; }
-      .point:nth-of-type(2n) { display: block }
-    }
-    .axis-x .tick:nth-of-type(2n) { display: block}
-  }
+  /*.series-label .label {*/
+  /*  display: none;*/
+  /*}*/
 
-  @container (max-width: 50rem) {
-    .chart {
-      grid-template: auto auto 1fr / 1fr;
-      grid-template-areas:
-      'header'
-      'legend'
-      'padding-wrapper';
-    }
+  /*.legend {*/
+  /*  margin-left: 2rem;*/
+  /*}*/
 
-    .legend {
-      width: 100%;
-      margin-bottom: 2rem;
-      margin-left: 0.5rem;
-    }
-    .legend .items {
-      flex-direction: row;
-      width: 100%;
-      justify-content: space-evenly;
-    }
-  }
+  /*.legend-item {*/
+  /*  margin-top: 1rem;*/
+  /*}*/
+
+  /*.point, .axis-x .tick {*/
+  /*  display: none;*/
+  /*}*/
+
+  /*@container (width < 30rem) {*/
+  /*  .point, .axis-x .tick {*/
+  /*    display: none;*/
+  /*  }*/
+
+  /*  .point-category {*/
+  /*    .point:first-of-type, .point:last-of-type { display: block; }*/
+  /*    .point:nth-of-type(4n) { display: block }*/
+  /*  }*/
+  /*  .axis-x .tick:nth-of-type(4n) { display: block}*/
+  /*}*/
+
+  /*@container (min-width: 30rem) {*/
+  /*  .point-category {*/
+  /*    .point:first-of-type, .point:last-of-type { display: block; }*/
+  /*    .point:nth-of-type(2n) { display: block }*/
+  /*  }*/
+  /*  .axis-x .tick:nth-of-type(2n) { display: block}*/
+  /*}*/
+
+  /*@container (max-width: 50rem) {*/
+  /*  .chart {*/
+  /*    grid-template: auto auto 1fr / 1fr;*/
+  /*    grid-template-areas:*/
+  /*    'header'*/
+  /*    'legend'*/
+  /*    'padding-wrapper';*/
+  /*  }*/
+
+  /*  .legend {*/
+  /*    width: 100%;*/
+  /*    margin-bottom: 2rem;*/
+  /*    margin-left: 0.5rem;*/
+  /*  }*/
+  /*  .legend .items {*/
+  /*    flex-direction: row;*/
+  /*    width: 100%;*/
+  /*    justify-content: space-evenly;*/
+  /*  }*/
+  /*}*/
 }
