--- a/src/css/window/toolbar/control-elements/dialogs.css
+++ b/src/css/window/toolbar/control-elements/dialogs.css
@@ -78,6 +78,9 @@
       input[type='number'] {
         width: 4ch;
       }
+      input[type='range'] {
+        width: 4rem;
+      }
     }
   }
 
