Add Solution for Adding CSS Transformations Add CSS Enter Exit Transformation for Lines

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -47,4 +47,8 @@
   --chart-padding-top: 0;
   --chart-padding-right: 0;
   --chart-padding-bottom: 0;
+
+  /*transitions*/
+  --transition-time-ms: 250;
+  --transition-time-line-enter-ms: var(--transition-time-ms);
 }
