Fix Conflicting Enter Transitions on extensive data series render Add CSS Transitions for Labels

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -51,4 +51,5 @@
   /*transitions*/
   --transition-time-ms: 250;
   --transition-time-line-enter-ms: var(--transition-time-ms);
+  --transition-time-label-enter-ms: var(--transition-time-ms);
 }
