--- a/src/css/axes.css
+++ b/src/css/axes.css
@@ -1,45 +1,71 @@
-.title-wrapper { grid-area: title-wrapper; }
+.title-wrapper {
+  grid-area: title-wrapper;
+}
 
-.ticks-transform { grid-area: ticks; }
+.ticks-transform {
+  grid-area: ticks;
+}
 
 .axis {
-  .title text { font-size: var(--font-size-axis-title); }
-  .subtitle text { font-size: var(--font-size-axis-subtitle); }
+  .title text {
+    font-size: var(--font-size-axis-title);
+  }
+
+  .subtitle text {
+    font-size: var(--font-size-axis-subtitle);
+  }
+
   .domain {
     stroke: var(--color-axes-line);
     fill: none;
   }
+
   .tick {
-    line { stroke: var(--color-axes-line); }
-    text { font-size: var(--font-size-axis-label); }
+    line {
+      stroke: var(--color-axes-line);
+    }
+
+    text {
+      font-size: var(--font-size-axis-label);
+    }
   }
 }
 
 .chart-cartesian {
-  .axis { display: grid; }
+  .axis {
+    display: grid;
+  }
 
   .axis-left, .axis-right {
     grid-template-areas: 'title-wrapper ticks';
     grid-template-columns: auto auto;
+
     .title-wrapper {
       display: flex;
+      justify-content: center;
       align-items: center;
+
       text {
+        --orientation: vertical;
         transform-box: fill-box;
-        transform-origin: 50% 50%;
-        transform: rotate(-90deg) translate(-50%, -150%);
+        transform-origin: center;
+        transform: rotate(-90deg);
       }
     }
-    .ticks-transform { --fit-width: true; }
+
+    .ticks-transform {
+      --fit-width: true;
+    }
   }
 
   .axis-right {
     grid-template-areas: 'ticks title-wrapper';
+
     .title-wrapper {
+      .subtitle { order: 1;}
+      .title { order: 2;}
       text {
-        transform-box: fill-box;
-        transform-origin: 50% 50%;
-        transform: rotate(90deg) translate(50%, 150%);
+        transform: rotate(90deg);
       }
     }
   }
@@ -48,7 +74,11 @@
   .axis-bottom, .axis-top {
     grid-template-areas: 'ticks' 'title-wrapper';
     grid-template-rows: auto auto;
-    .title .text, .subtitle .text { margin: 0 auto; }
+
+    .title .text, .subtitle .text {
+      margin: 0 auto;
+    }
+
     .ticks-transform {
       --fit-height: true;
     }
