--- a/src/css/respvis-core/chart/element/label.css
+++ b/src/css/respvis-core/chart/element/label.css
@@ -1,5 +1,8 @@
 .series-label {
-  & .label {
+  .label {
+    font-size: var(--font-size-element-label);
+    pointer-events: none;
+
     &.animated {
       font-size: 0;
       opacity: 0;
@@ -9,7 +12,12 @@
         font-size: var(--font-size-element-label);
       }
     }
+
+    &.highlight {
+      font-size: calc(1.3 * var(--font-size-element-label));
+    }
   }
+
   text {
     text-anchor: middle;
   }
